RESOLVED FIXED7640
Menu items are displayed as "undefined"
https://bugs.webkit.org/show_bug.cgi?id=7640
Summary Menu items are displayed as "undefined"
Rudolf E. Reiber
Reported 2006-03-07 01:28:46 PST
I have to use a forum in the BSCW-platform. It is a platform open only to members, so I cannot give a URL to it. When I use the BSCW with Firefox, all pop-up-menues are displayed properly, when using Safari, all menue-items are displayed as "undefined".
Attachments
Screenshot Firefox (481.11 KB, image/jpeg)
2006-03-07 01:33 PST, Rudolf E. Reiber
no flags
Screenshot Safari (502.05 KB, image/jpeg)
2006-03-07 01:34 PST, Rudolf E. Reiber
no flags
The source code of the page (5.80 KB, application/zip)
2006-03-07 02:35 PST, Rudolf E. Reiber
no flags
proposed fix (14.66 KB, patch)
2007-01-07 07:43 PST, Alexey Proskuryakov
darin: review+
proposed fix (16.79 KB, patch)
2007-01-08 11:26 PST, Alexey Proskuryakov
darin: review+
Rudolf E. Reiber
Comment 1 2006-03-07 01:33:21 PST
Created attachment 6912 [details] Screenshot Firefox
Rudolf E. Reiber
Comment 2 2006-03-07 01:34:26 PST
Created attachment 6913 [details] Screenshot Safari
Gustaaf Groenendaal (MysteryQuest)
Comment 3 2006-03-07 02:18:56 PST
Could you please provide us with the source code of the page. The best way is opening the page with FireFox and choose "Save As". Upload this as a .zip archive in an attachment. If there is private information on the page you can filter that out ofcourse.
Rudolf E. Reiber
Comment 4 2006-03-07 02:35:03 PST
Created attachment 6914 [details] The source code of the page
Alexey Proskuryakov
Comment 5 2007-01-07 07:43:43 PST
Created attachment 12277 [details] proposed fix The problem here was that a local variable "item" got shadowed by Node::item within a "with" block. AFAICT, there is no reason to have this method on Node. "Gecko DOM reference" cited in code comment is probably <http://developer.mozilla.org/en/docs/DOM:element.item>, which specifically states that "despite this article's name, item() is not a method of DOM Element or Node." The included test passes in Firefox 2 and IE 6.
Darin Adler
Comment 6 2007-01-07 21:25:56 PST
Comment on attachment 12277 [details] proposed fix Looks good. Would you please add the item function to HTMLSelectElement.idl/h/cpp instead of adding it to kjs_html.h/cpp?
Alexey Proskuryakov
Comment 7 2007-01-08 01:28:56 PST
(In reply to comment #6) > Would you please add the item function to HTMLSelectElement.idl/h/cpp instead > of adding it to kjs_html.h/cpp? HTMLSelectElement JS bindings are not generated from IDL (yet?), so I guess this code has to go to kjs_html. I'm not sure if we need this method in ObjC binding, its standards status seems somewhat unclear.
Darin Adler
Comment 8 2007-01-08 10:09:39 PST
(In reply to comment #7) > HTMLSelectElement JS bindings are not generated from IDL (yet?), so I guess > this code has to go to kjs_html. OK. Argh. Well, I'd still like HTMLSelectElement.h/cpp to have the code, even if the binding is old-style. I marked the patch review+, though. > I'm not sure if we need this method in ObjC binding, its standards status seems somewhat unclear. Putting methods in ObjC at one time was based on what was in the W3C standard, but nowadays we'd like the ObjC binding to be as close as possible to what's available through JavaScript. And the system automatically keeps new calls SPI, so there's no problem with Apple API policy.
Alexey Proskuryakov
Comment 9 2007-01-08 11:26:13 PST
Created attachment 12302 [details] proposed fix Added item() to DOM and ObjC binding, too. Not sure if it should be marked const in DOM. It returns a non-const pointer to object data, so it probably shouldn't, but is marked const in NodeList, for example.
Darin Adler
Comment 10 2007-01-08 11:28:42 PST
Comment on attachment 12302 [details] proposed fix r=me
Alexey Proskuryakov
Comment 11 2007-01-08 12:00:22 PST
Committed revision 18674.
Note You need to log in before you can comment on or make changes to this bug.