        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=7640
        Menu items are displayed as "undefined"

WebCore:
        * bindings/js/kjs_dom.cpp:
        (KJS::DOMNodeProtoFunc::callAsFunction):
        * bindings/js/kjs_domnode.h:
        (KJS::DOMNode::):
        Removed Node::item. No idea why it was there in the first place.

        * bindings/js/kjs_html.cpp:
        (KJS::HTMLElementFunction::callAsFunction):
        * bindings/js/kjs_html.h:
        (KJS::JSHTMLElement::):
        Added HTMLSelectElement::item. It is not in DOM2 IDL, but the spec seems to mentions it anyway:
        "The contained options can be directly accessed through the select element as a collection."

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::namedItem):
        (WebCore::HTMLSelectElement::item):
        * html/HTMLSelectElement.h:
        * html/HTMLSelectElement.idl:
        Added this method to DOM and IDL, too. Made namedItem() non-virtual.

LayoutTests:
        * fast/dom/Window/window-properties-expected.txt: Updated the results.

        * fast/dom/node-item-expected.txt: Added.
        * fast/dom/node-item.html: Added.
        Check that there is no Node:item or HTMLElement:item.



Canonical link: https://commits.webkit.org/15693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18674 268f45cc-cd09-0410-ab3c-d52691b4dbfc