WebCore/html/HTMLSelectElement.cpp
@@ -919,7 +919,12 @@ void HTMLSelectElement::setSize(int size)
 
 Node* HTMLSelectElement::namedItem(const String &name, bool caseSensitive)
 {
-    return (options()->namedItem(name, caseSensitive));
+    return options()->namedItem(name, caseSensitive);
+}
+
+Node* HTMLSelectElement::item(unsigned index)
+{
+    return options()->item(index);
 }
 
 void HTMLSelectElement::setOption(unsigned index, HTMLOptionElement* option, ExceptionCode& ec)
